--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/kasper.css">
+    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon" />
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
     </style>
@@ -36,7 +37,303 @@
         </div>
     </header>
     <!-- End Header  -->
+    <!-- Start Landing -->
+    <div class="landing">
+        <div class="overlay"></div>
+        <div class="text">
+            <div class="content">
+                <h2>Hello World! <br>
+                    We Are Kasper We Make Art.</h2>
+                <p>
+                    Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget
+                    tincidunt nibh pulvinar a. Curabitur aliquet quam. Accumsan id imperdiet et, porttitor at sem.
+                    Mauris blandit aliquet elit, eget tincidunt.
+                </p>
+            </div>
+        </div>
+        <i class="fas fa-angle-left fa-2x navigate-bg">
+        </i>
+        <i class="fas fa-angle-right fa-2x navigate-bg">
+        </i>
+        <ul class="bulets">
+            <li></li>
+            <li class="active"></li>
+            <li></li>
+        </ul>
+    </div>
+    <!-- End Landing -->
+    <!-- Start Services  -->
+    <div class="servcies">
+        <div class="container">
+            <div class="main-heading">
+                <h2>Services</h2>
+                <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget
+                    tincidunt.</p>
+            </div>
+            <div class="content">
+                <div class="box">
+                    <i class="fas fa-desktop fa-3x"></i>
+                    <div class="text">
+                        <h3>Vorem amet intuitive</h3>
+                        <p> Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet
+                            elit,
+                            eget
+                            tincidunt nibh pulvinar a. Curabitur aliquet quam. Accumsan id imperdiet et, porttitor at
+                            sem.
+                            Mauris blandit aliquet elit, eget tincidunt.</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <i class="fas fa-cog fa-3x"></i>
+                    <div class="text">
+                        <h3>Vorem amet intuitive</h3>
+                        <p> Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet
+                            elit,
+                            eget
+                            tincidunt nibh pulvinar a. Curabitur aliquet quam. Accumsan id imperdiet et, porttitor at
+                            sem.
+                            Mauris blandit aliquet elit, eget tincidunt.</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <i class="fas fa-pencil-ruler fa-3x"></i>
+                    <div class="text">
+                        <h3>Vorem amet intuitive</h3>
+                        <p> Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet
+                            elit,
+                            eget
+                            tincidunt nibh pulvinar a. Curabitur aliquet quam. Accumsan id imperdiet et, porttitor at
+                            sem.
+                            Mauris blandit aliquet elit, eget tincidunt.</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <i class="fas fa-camera fa-3x"></i>
+                    <div class="text">
+                        <h3>Vorem amet intuitive</h3>
+                        <p> Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet
+                            elit,
+                            eget
+                            tincidunt nibh pulvinar a. Curabitur aliquet quam. Accumsan id imperdiet et, porttitor at
+                            sem.
+                            Mauris blandit aliquet elit, eget tincidunt.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Services  -->
+    <!-- Start Design -->
+    <div class="Design">
+        <div class="image">
+            <img src="images/mobile.png" alt="mobile">
+        </div>
+        <div class="text">
+            <h2>OUR DESIGN COMES WITH...</h2>
+            <ul>
+                <li>Responsive Design</li>
+                <li>Modern And Clean Design</li>
+                <li>Clean Code</li>
+                <li>Browser Friendly</li>
+            </ul>
+        </div>
+    </div>
+    <!-- End Design -->
 
+    <!-- Start Portfolio -->
+    <div class="portfolio">
+        <div class="main-heading">
+            <h2>Portfolio</h2>
+            <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget
+                tincidunt.</p>
+        </div>
+        <ul>
+            <li class="active">All</li>
+            <li>App</li>
+            <li>Photo</li>
+            <li>Web</li>
+            <li>Print</li>
+        </ul>
+        <div class="gallary">
+            <div class="box">
+                <img src="images/Gallery/shuffle-01.jpg" alt="shuffle-01">
+                <div class="caption">
+                    <h4>Awesome Image</h4>
+                    <p>Photography</p>
+                </div>
+            </div>
+            <div class="box">
+                <img src="images/Gallery/shuffle-02.jpg" alt="shuffle-02">
+                <div class="caption">
+                    <h4>Awesome Image</h4>
+                    <p>Photography</p>
+                </div>
+            </div>
+            <div class="box">
+                <img src="images/Gallery/shuffle-03.jpg" alt="shuffle-03">
+                <div class="caption">
+                    <h4>Awesome Image</h4>
+                    <p>Photography</p>
+                </div>
+            </div>
+            <div class="box">
+                <img src="images/Gallery/shuffle-04.jpg" alt="shuffle-04">
+                <div class="caption">
+                    <h4>Awesome Image</h4>
+                    <p>Photography</p>
+                </div>
+            </div>
+            <div class="box">
+                <img src="images/Gallery/shuffle-05.jpg" alt="shuffle-05">
+                <div class="caption">
+                    <h4>Awesome Image</h4>
+                    <p>Photography</p>
+                </div>
+            </div>
+            <div class="box">
+                <img src="images/Gallery/shuffle-06.jpg" alt="shuffle-06">
+                <div class="caption">
+                    <h4>Awesome Image</h4>
+                    <p>Photography</p>
+                </div>
+            </div>
+            <div class="box">
+                <img src="images/Gallery/shuffle-07.jpg" alt="shuffle-07">
+                <div class="caption">
+                    <h4>Awesome Image</h4>
+                    <p>Photography</p>
+                </div>
+            </div>
+            <div class="box">
+                <img src="images/Gallery/shuffle-08.jpg" alt="shuffle-08">
+                <div class="caption">
+                    <h4>Awesome Image</h4>
+                    <p>Photography</p>
+                </div>
+            </div>
+        </div>
+        <a href="#" class="more">more</a>
+    </div>
+    <!-- End Portfolio -->
+    <!-- Start Video -->
+    <div class="video">
+        <video muted loop autoplay>
+            <source src="images/Robin-video.mp4">
+        </video>
+        <div class="text">
+            <h2>Super Awesome Video Here</h2>
+            <p>Its All You Need</p>
+            <button>see more</button>
+        </div>
+    </div>
+    <!-- End Video -->
+    <!-- Start About  -->
+    <div class="about">
+        <div class="container">
+            <div class="main-heading">
+                <h2>About Us</h2>
+                <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget
+                    tincidunt.</p>
+            </div>
+            <img src="images/about.png" alt="about">
+        </div>
+    </div>
+    <!-- End About  -->
+    <!-- Start Status -->
+    <div class="status">
+        <div class="container">
+            <div class="box">
+                <i class="fas fa-mug-hot"></i>
+                <div class="text">
+                    <h2>1.236</h2>
+                    <p>Coffee Drinks</p>
+                </div>
+            </div>
+            <div class="box">
+                <i class="far fa-folder"></i>
+                <div class="text">
+                    <h2>256</h2>
+                    <p>Completed Projects</p>
+                </div>
+            </div>
+            <div class="box">
+                <i class="far fa-envelope"></i>
+                <div class="text">
+                    <h2>1,743</h2>
+                    <p>Mail Sent</p>
+                </div>
+            </div>
+            <div class="box">
+                <i class="fas fa-trophy"></i>
+                <div class="text">
+                    <h2>17</h2>
+                    <p>Awards Received</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Status -->
+    <!-- Start Skills -->
+    <div class="our-skills">
+        <div class="container">
+            <div class="Testimonials">
+                <h3>Testimonials</h3>
+                <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget
+                    tincidunt.</p>
+                <div class="box">
+                    <img src="images/skills-01.jpg" alt="img1">
+                    <div class="text">
+                        Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit,
+                        eget tincidunt.
+                        <p class="name">John Doe, CEO</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="images/skills-02.jpg" alt="img2">
+                    <div class="text">
+                        Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit,
+                        eget tincidunt.
+                        <p class="name">John Doe, CEO</p>
+                    </div>
+                </div>
+                <ul>
+                    <li></li>
+                    <li class="active"></li>
+                    <li></li>
+                </ul>
+            </div>
+            <div class="skills">
+                <h3>skills</h3>
+                <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit,
+                    eget tincidunt</p>
+                <div class="lang-prog">
+                    <h4>adobe</h4>
+                    <div class="bar">
+                        <span  style="width: 90%;" data-progress="90%"> </span>
+                    </div>
+                </div>
+                <div class="lang-prog">
+                    <h4>html & css</h4>
+                    <div class="bar">
+                        <span  style="width: 85%;" data-progress="85%"> </span>
+                    </div>
+                </div>
+                <div class="lang-prog">
+                    <h4>javascript</h4>
+                    <div class="bar">
+                        <span  style="width: 80%;" data-progress="80%"> </span>
+                    </div>
+                </div>
+                <div class="lang-prog">
+                    <h4>Php</h4>
+                    <div class="bar">
+                        <span  style="width: 90%;" data-progress="90%"> </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Skills -->
 </body>
 
 </html>
