--- a/index.html
+++ b/index.html
@@ -426,11 +426,9 @@
               <a href="">Buy Now</a>
             </div>
           </div>
-          <div class="main-footer">
-            <p>Contact us if you have special request</p>
-            <a>Contact us</a>
-          </div>
         </div>
+        <p class="contact-text">Contact us if you have special request</p>
+        <a class="contact-link">Contact us</a>
       </div>
     </div>
     <!-- End Pricing  -->
@@ -440,13 +438,67 @@
         <form action="">
           <i class="far fa-envelope"></i>
           <input type="text" placeholder="Your Email" />
-          <button type="submit">Subscrip</button>
+          <input type="submit" value="Subscrib" />
         </form>
         <p>
           Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
-          Mauris blan dit aliquet elit, eget tincidunt.</p>
+          Mauris blan dit aliquet elit, eget tincidunt.
+        </p>
       </div>
     </div>
     <!-- End Subscrip -->
+    <!-- Start Conatct  -->
+    <div class="contact-us">
+      <div class="container">
+        <div class="main-heading">
+          <h2>Contact Us</h2>
+          <p>
+            Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+            Mauris blandit aliquet elit, eget tincidunt.
+          </p>
+        </div>
+        <div class="content">
+          <form action="">
+            <input type="text" placeholder="Your Name" />
+            <input type="text" placeholder="Your Email" />
+            <input type="text-area" placeholder="Your Message" />
+            <div class="submit">
+              <input type="submit" value="Send Message" />
+            </div>
+          </form>
+          <div class="info">
+            <h4>GET IN TOUCH</h4>
+            <span>+00 123.456.789</span>
+            <span>+00 123.456.789</span>
+            <h4>Where We Are</h4>
+            <address>
+              <span>New York, NYC</span>
+              <br />
+              <span>New York, NYC</span>
+              <br />
+              <span>123-4567-890</span>
+              <br />
+              <span>USA</span>
+            </address>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End Conatct  -->
+    <!-- Start Footer  -->
+    <footer class="footer">
+      <img src="images/logo.png" alt="footer-logo" />
+      <h3>We Are Social</h3>
+      <div class="social">
+          <i class="fab fa-facebook-f"></i>
+          <i class="fab fa-twitter"></i>
+          <i class="fas fa-home"></i>
+          <i class="fab fa-linkedin"></i>
+        </ul>
+      <div class="copy-right">
+        &copy; 2021   <span>Kasper</span> All Rights Reserved.
+      </div>
+    </footer>
+    <!-- End Footer  -->
   </body>
 </html>
